--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "azure-changeset-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Azure Function for checking for changesets and programmatically generating a changelog",
+  "repository": {
+    "url": "https://github.com/emma-campbell/azure-changeset-bot"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -9,7 +12,24 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@changesets/apply-release-plan": "^6.1.3",
+    "@changesets/config": "^2.3.0",
+    "@changesets/get-release-plan": "^3.0.16",
+    "@changesets/pre": "^1.0.14",
+    "@changesets/read": "^0.5.9",
+    "@changesets/types": "^5.2.1",
+    "@manypkg/get-packages": "^1.1.3",
+    "azure-devops-node-api": "^11.2.0",
+    "dotenv": "^16.0.3",
+    "fs-extra": "^11.1.0",
+    "mdast-util-to-string": "^1.0.6",
+    "node.extend": "^2.0.2",
+    "remark-parse": "^7.0.1",
+    "remark-stringify": "^7.0.3",
+    "simple-git": "^3.16.0",
+    "unified": "^8.3.2"
+  },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
     "@types/node": "16.x",
